--- a/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
+++ b/Galactic.ActiveDirectory/Galactic.ActiveDirectory.csproj
@@ -19,5 +19,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Galactic.LDAP\Galactic.LDAP.csproj" />
+    <ProjectReference Include="..\Galactic.Identity\Galactic.Identity.csproj" />
   </ItemGroup>
 </Project>
