--- a/Galactic.PowerShell/Galactic.PowerShell.csproj
+++ b/Galactic.PowerShell/Galactic.PowerShell.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,7 +9,7 @@
     <None Remove="System.Management.Automation" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Management.Automation" Version="7.1.5" />
+    <PackageReference Include="System.Management.Automation" Version="7.2.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Galactic.EventLog\Galactic.EventLog.csproj" />
